[gd_scene load_steps=4 format=3 uid="uid://oot6hxi5js6e"]

[ext_resource type="StyleBox" uid="uid://g2jcun3y34sm" path="res://resources/ui_style.tres" id="1_fu4wh"]
[ext_resource type="Script" uid="uid://ctto0jwqtjwh8" path="res://scripts/game_over.gd" id="1_x6o8e"]
[ext_resource type="Theme" uid="uid://6fqxqvibi1ml" path="res://resources/main_theme.tres" id="2_x6o8e"]

[node name="GameOver" type="Node"]
process_mode = 2
script = ExtResource("1_x6o8e")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 896.0
theme_override_styles/panel = ExtResource("1_fu4wh")

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 384.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="MainLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_x6o8e")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 48
text = "GAME OVER!"
horizontal_alignment = 1

[node name="ScoreBox" type="VBoxContainer" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer/ScoreBox"]
layout_mode = 2
theme = ExtResource("2_x6o8e")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
text = "Your score:"
horizontal_alignment = 1

[node name="Score" type="Label" parent="Panel/CenterContainer/VBoxContainer/ScoreBox"]
layout_mode = 2
theme = ExtResource("2_x6o8e")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
text = "99999"
horizontal_alignment = 1

[node name="ButtonsBox" type="VBoxContainer" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RestartButton" type="Button" parent="Panel/CenterContainer/VBoxContainer/ButtonsBox"]
layout_mode = 2
theme = ExtResource("2_x6o8e")
theme_override_font_sizes/font_size = 18
text = "Restart"

[node name="ExitButton" type="Button" parent="Panel/CenterContainer/VBoxContainer/ButtonsBox"]
layout_mode = 2
theme = ExtResource("2_x6o8e")
theme_override_font_sizes/font_size = 18
text = "Exit"

[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/ButtonsBox/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/ButtonsBox/ExitButton" to="." method="_on_exit_button_pressed"]
